--- a/followAlong/package.json
+++ b/followAlong/package.json
@@ -23,6 +23,7 @@
     "ejs-mate": "^4.0.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "flash": "^1.1.0",
     "mongoose": "^6.8.4"
   }
 }
