--- a/followAlong/package.json
+++ b/followAlong/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Lynch23/Basic-Auth-Conception#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "connect-flash": "^0.1.1",
     "ejs": "^3.1.8",
     "ejs-mate": "^4.0.0",
     "express": "^4.18.2",
